# FM0dlp

./: .gitignore  README.md  fm-dlp.py  fm0dlp.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
modules/: __main__.py  add_metadata.py  cli.py  colors.py  configer.py  download.py  downloader.py  help.py  helper.py  search.py  searching.py  update.py
